0.12b
* NEW: Working days
* INTERNAL: setNextCheck now used on start (sleepy icon works from start)
* NEW: Saving XML config, optionally prefer loading of this file
 
0.11.1
(public release of 0.11.0.1-0.11.0.2) 

0.11.0.2
* NEW: Can finally be run in Firefox 3.0

0.11.0.1
* BUGFIX: Sometimes opened wrong type of information window
* LANG: Re-added tr-TR

0.11
(public release of 0.10.9-0.10.9.4)

0.10.9.4 (testing)
* NEW: Filter option 'host and services whose notifications is disabled' now accept also global disabled notifications

0.10.9.3 (for Babelzilla)

0.10.9.1 (testing)
* NEW: Option to set status.cgi download timeout by user
* NEW: Option to show/not show Attempt and Status solumns in information window
* NEW: Option to specify the lowest level to play sound with (only for service alerts).
* NEW: extremely short statusbar info (no No problem, colored background behind N-icon)
* BUGFIX: Do not show empty popup when no alert available
* BUGFIX: Fixed some bugs in Run only in first opened window

0.10.9 (testing)
* INTERNAL: New version of popup - tooltip and popup mashup
* INTERNAL: Popup scrollbars are used instead of arrows, but scrollbars have to be still visible
* BUGFIX: If there is no server active, then label Not Set is shown instead of No Problem
* BUGFIX: No colored Error message
* BUGFIX: Regexp on services used to remove the whole host - fixed
* INTERNAL: Limit of number of servers increased to 200

0.10.4
* BUGFIX: removed annoying alert when there was sometimes problem with playing sound

0.10.3
* BUGFIX: sounds are playing again
* BUGFIX: popup of different type sometimes opened at same time
* LANG: updated fr-FR locale
* LANG: updated bg-BG locale

0.10.2 (not approved on Mozilla Add-ons)
* INTERNAL: bugfix of "0.10.1 bugfix" Sorry!

0.10.1
* INTERNAL: merged omitted bugfixes from versions 0.9.1-0.9.5

0.10
* NEW: ability to change ordering of servers
* NEW: time of last download of alerts for each server (shown in tooltip)