@@ -2,6 +2,7 @@
 * NEW: Working days
 * INTERNAL: setNextCheck now used on start (sleepy icon works from start)
 * NEW: Saving XML config, optionally prefer loading of this file
+* BUGFIX: Not working option to play sound only when NEW problems are found 
  
 0.11.1
 (public release of 0.11.0.1-0.11.0.2) 
